Fleshed out node definitions and made their rendering more dynamic.

--- a/prototype.html
+++ b/prototype.html
@@ -12,10 +12,12 @@
         <button data-tab="data-sources" class="active">Data Sources</button>
         <button data-tab="agents">Agents</button>
         <button data-tab="tools">Tools</button>
+        <button data-tab="utilities">Utilities</button>
       </div>
       <div class="tab-content" id="data-sources"></div>
       <div class="tab-content hidden" id="agents"></div>
       <div class="tab-content hidden" id="tools"></div>
+      <div class="tab-content hidden" id="utilities"></div>
     </aside>
     <main id="workspace">
       <!-- SVG must be before canvas so z-index layering works -->
